--- a/aj_jewellery/public/index.html
+++ b/aj_jewellery/public/index.html
@@ -41,4 +41,5 @@
     -->
   </body>
   <script src="https://kit.fontawesome.com/f79dcd66bd.js" crossorigin="anonymous"></script>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </html>
